monthly return, daily return, normalisasi data

--- a/main.ipynb
+++ b/main.ipynb
@@ -527,6 +527,300 @@
         "print(\"\\nJumlah Nilai Hilang per Kolom di stock_data_yf:\")\n",
         "display(stock_data_yf.isnull().sum())"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Lima Baris Pertama Daily Returns:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>BYDDY</th>\n",
+              "      <th>F</th>\n",
+              "      <th>STLA</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2015-12-01</th>\n",
+              "      <td>0.003687</td>\n",
+              "      <td>0.016050</td>\n",
+              "      <td>-0.000702</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-12-02</th>\n",
+              "      <td>-0.005510</td>\n",
+              "      <td>-0.020604</td>\n",
+              "      <td>-0.024579</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-12-03</th>\n",
+              "      <td>-0.022161</td>\n",
+              "      <td>-0.019635</td>\n",
+              "      <td>-0.002880</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-12-04</th>\n",
+              "      <td>0.008499</td>\n",
+              "      <td>0.015737</td>\n",
+              "      <td>0.013718</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-12-07</th>\n",
+              "      <td>-0.005618</td>\n",
+              "      <td>-0.005634</td>\n",
+              "      <td>-0.000713</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "               BYDDY         F      STLA\n",
+              "Date                                    \n",
+              "2015-12-01  0.003687  0.016050 -0.000702\n",
+              "2015-12-02 -0.005510 -0.020604 -0.024579\n",
+              "2015-12-03 -0.022161 -0.019635 -0.002880\n",
+              "2015-12-04  0.008499  0.015737  0.013718\n",
+              "2015-12-07 -0.005618 -0.005634 -0.000713"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Lima Baris Pertama Monthly Returns:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>BYDDY</th>\n",
+              "      <th>F</th>\n",
+              "      <th>STLA</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2015-12-31</th>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>-0.016748</td>\n",
+              "      <td>-0.018245</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-01-31</th>\n",
+              "      <td>-0.166820</td>\n",
+              "      <td>-0.124010</td>\n",
+              "      <td>-0.234195</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-02-29</th>\n",
+              "      <td>0.101770</td>\n",
+              "      <td>0.047739</td>\n",
+              "      <td>-0.026989</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-03-31</th>\n",
+              "      <td>0.149598</td>\n",
+              "      <td>0.079137</td>\n",
+              "      <td>0.176642</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-04-30</th>\n",
+              "      <td>0.018341</td>\n",
+              "      <td>0.015523</td>\n",
+              "      <td>0.003722</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "               BYDDY         F      STLA\n",
+              "Date                                    \n",
+              "2015-12-31  0.000000 -0.016748 -0.018245\n",
+              "2016-01-31 -0.166820 -0.124010 -0.234195\n",
+              "2016-02-29  0.101770  0.047739 -0.026989\n",
+              "2016-03-31  0.149598  0.079137  0.176642\n",
+              "2016-04-30  0.018341  0.015523  0.003722"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Lima Baris Pertama Normalized Stock Data:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>BYDDY</th>\n",
+              "      <th>F</th>\n",
+              "      <th>STLA</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2015-11-30</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-12-01</th>\n",
+              "      <td>1.003687</td>\n",
+              "      <td>1.016050</td>\n",
+              "      <td>0.999298</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-12-02</th>\n",
+              "      <td>0.998157</td>\n",
+              "      <td>0.995115</td>\n",
+              "      <td>0.974737</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-12-03</th>\n",
+              "      <td>0.976037</td>\n",
+              "      <td>0.975576</td>\n",
+              "      <td>0.971930</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015-12-04</th>\n",
+              "      <td>0.984332</td>\n",
+              "      <td>0.990928</td>\n",
+              "      <td>0.985263</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "               BYDDY         F      STLA\n",
+              "Date                                    \n",
+              "2015-11-30  1.000000  1.000000  1.000000\n",
+              "2015-12-01  1.003687  1.016050  0.999298\n",
+              "2015-12-02  0.998157  0.995115  0.974737\n",
+              "2015-12-03  0.976037  0.975576  0.971930\n",
+              "2015-12-04  0.984332  0.990928  0.985263"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "\n",
+        "# 4. Hitung daily returns\n",
+        "daily_returns = stock_data_yf.pct_change().dropna()\n",
+        "\n",
+        "# 5. Hitung monthly returns\n",
+        "# Resample data to get the last trading day of each month and calculate percentage change\n",
+        "monthly_returns = stock_data_yf.resample('ME').last().pct_change().dropna()\n",
+        "\n",
+        "# 6. Normalisasi data\n",
+        "# Divide each price by the price on the first day for each stock\n",
+        "normalized_stock_data = stock_data_yf / stock_data_yf.iloc[0]\n",
+        "\n",
+        "# 7. Tampilkan lima baris pertama dari daily_returns, monthly_returns, dan normalized_stock_data\n",
+        "print(\"\\nLima Baris Pertama Daily Returns:\")\n",
+        "display(daily_returns.head())\n",
+        "\n",
+        "print(\"\\nLima Baris Pertama Monthly Returns:\")\n",
+        "display(monthly_returns.head())\n",
+        "\n",
+        "print(\"\\nLima Baris Pertama Normalized Stock Data:\")\n",
+        "display(normalized_stock_data.head())"
+      ]
     }
   ],
   "metadata": {
